--- a/.github/workflows/coders-academy-dotnet-core.yml
+++ b/.github/workflows/coders-academy-dotnet-core.yml
@@ -21,3 +21,25 @@ jobs:
       run: dotnet build CodersAcademy/CodersAcademy.sln --configuration Release --no-restore
     - name: Test
       run: dotnet test CodersAcademy/CodersAcademy.sln --no-restore --verbosity normal
+  sonarCloud:
+    name: SonarCloud
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - with:
+        fetch-depth: 0
+      - name: Install SonarCloud scanner
+        shell: powershell
+        run: |
+          New-Item -Path .\.sonar\scanner -ItemType Directory
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        shell: powershell
+        run: |
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"wallacemariadeandrade_coders-academy-bootcamp-turma-1" /o:"wallacemariadeandrade" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+          dotnet build CodersAcademy/CodersAcademy.sln
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+
