--- a/.github/workflows/coders-academy-dotnet-core.yml
+++ b/.github/workflows/coders-academy-dotnet-core.yml
@@ -2,25 +2,24 @@ name: .NET Core
 
 on:
   push:
-    branches: [ main ]
-    paths: 'CodersAcademy/**'
+    branches: [main]
+    paths: "CodersAcademy/**"
 jobs:
-    build:
+  build:
+    runs-on: ubuntu-latest
 
-      runs-on: ubuntu-latest
-
-      steps:
-        - uses: actions/checkout@v2
-        - name: Setup .NET Core
-          uses: actions/setup-dotnet@v1
-          with:
-            dotnet-version: 5.0.100
-        - name: Install dependencies
-          run: dotnet restore CodersAcademy/CodersAcademy.sln
-        - name: Build
-          run: dotnet build CodersAcademy/CodersAcademy.sln --configuration Release --no-restore
-        - name: Test
-          run: dotnet test CodersAcademy/CodersAcademy.sln --no-restore --verbosity normal
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 5.0.100
+      - name: Install dependencies
+        run: dotnet restore CodersAcademy/CodersAcademy.sln
+      - name: Build
+        run: dotnet build CodersAcademy/CodersAcademy.sln --configuration Release --no-restore
+      - name: Test
+        run: dotnet test CodersAcademy/CodersAcademy.sln --no-restore --verbosity normal
   sonarCloud:
     name: SonarCloud
     runs-on: windows-latest
@@ -36,7 +35,7 @@ jobs:
       - name: Build
         shell: powershell
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} #TOken
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"wallacemariadeandrade_coders-academy-bootcamp-turma-1" /o:"wallacemariadeandrade" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet build CodersAcademy/CodersAcademy.sln
