--- a/.github/workflows/coders-academy-dotnet-core.yml
+++ b/.github/workflows/coders-academy-dotnet-core.yml
@@ -38,5 +38,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"wallacemariadeandrade_coders-academy-bootcamp-turma-1" /o:"wallacemariadeandrade" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.verbose=true /d:sonar.host.url="https://sonarcloud.io"
-          dotnet build CodersAcademy/CodersAcademy.API/CodersAcademy.csproj
+          dotnet build CodersAcademy/CodersAcademy.API/CodersAcademy.API.csproj
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
