--- a/.github/workflows/coders-academy-dotnet-core.yml
+++ b/.github/workflows/coders-academy-dotnet-core.yml
@@ -20,3 +20,23 @@ jobs:
         run: dotnet build CodersAcademy/CodersAcademy.sln --configuration Release --no-restore
       - name: Test
         run: dotnet test CodersAcademy/CodersAcademy.sln --no-restore --verbosity normal
+  sonarCloud:
+    name: SonarCloud
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Install SonarCloud scanner
+        shell: powershell
+        run: |
+          New-Item -Path .\.sonar\scanner -ItemType Directory
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+      - name: Build
+        shell: powershell
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"rafaelcruz-net_coders-academy-bootcamp-turma-1" /o:"rafaelcruz-net" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+          dotnet build CodersAcademy/CodersAcademy.sln
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
