--- a/.github/workflows/coders-academy-dotnet-core.yml
+++ b/.github/workflows/coders-academy-dotnet-core.yml
@@ -26,31 +26,16 @@ jobs:
         - uses: actions/checkout@v2
           with:
             fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-        - name: Cache SonarCloud packages
-          uses: actions/cache@v1
-          with:
-            path: ~\sonar\cache
-            key: ${{ runner.os }}-sonar
-            restore-keys: ${{ runner.os }}-sonar
-        - name: Cache SonarCloud scanner
-          id: cache-sonar-scanner
-          uses: actions/cache@v1
-          with:
-            path: .\.sonar\scanner
-            key: ${{ runner.os }}-sonar-scanner
-            restore-keys: ${{ runner.os }}-sonar-scanner
         - name: Install SonarCloud scanner
-          if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
           shell: powershell
           run: |
-            New-Item -Path .\.sonar\scanner -ItemType Directory
-            dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+            dotnet tool install --global dotnet-sonarscanner --version 5.0.4 --tool-path .\.sonar\scanner
         - name: Build and analyze
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           shell: powershell
           run: |
-            .\.sonar\scanner\dotnet-sonarscanner begin /k:"wallacemariadeandrade_coders-academy-bootcamp-turma-1" /o:"wallacemariadeandrade" /d:sonar.login="505d816c2fcba1d8dd2a7d28eb74a38d13a81ecf" /d:sonar.host.url="https://sonarcloud.io"
+            .\.sonar\scanner\dotnet sonarscanner begin /k:"wallacemariadeandrade_coders-academy-bootcamp-turma-1" /o:"wallacemariadeandrade" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
             dotnet build CodersAcademy/CodersAcademy.sln
-            .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="505d816c2fcba1d8dd2a7d28eb74a38d13a81ecf"
+            .\.sonar\scanner\dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
