--- a/.github/workflows/coders-academy-dotnet-core.yml
+++ b/.github/workflows/coders-academy-dotnet-core.yml
@@ -39,4 +39,4 @@ jobs:
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"wallacemariadeandrade_coders-academy-bootcamp-turma-1" /o:"wallacemariadeandrade" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.verbose=true
           dotnet build CodersAcademy/CodersAcademy.sln
-          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.verbose=true /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
