Atualiza nome do app

--- a/.github/workflows/coders-academy-dotnet-core.yml
+++ b/.github/workflows/coders-academy-dotnet-core.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Build and deploy the Docker image
         env: 
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          APP_NAME: ${{ 'coders-academy-backend' }}
+          APP_NAME: ${{ 'codersacademybackend' }}
         run: |
           cd ./CodersAcademy
           docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
