--- a/CodersAcademy/Dockerfile
+++ b/CodersAcademy/Dockerfile
@@ -1,5 +1,5 @@
 # NuGet restore
-FROM mcr.microsoft.com/dotnet/core/sdk:5.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0.100 AS build
 WORKDIR /CodersAcademy
 COPY *.sln .
 COPY CodersAcademy.API/*.csproj CodersAcademy.API/
@@ -11,7 +11,7 @@ FROM build AS publish
 WORKDIR /CodersAcademy/CodersAcademy.API
 RUN dotnet publish -c Release -o /CodersAcademy/publish
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:5.0 AS runtime
+FROM mcr.microsoft.com/dotnet/aspnet:5.0.100 AS runtime
 WORKDIR /CodersAcademy
 COPY --from=publish /CodersAcademy/publish .
 # ENTRYPOINT ["dotnet", "Colors.API.dll"]
