Habilita CORS para origens permitidas

--- a/CodersAcademy/CodersAcademy.API/appsettings.json
+++ b/CodersAcademy/CodersAcademy.API/appsettings.json
@@ -8,6 +8,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings" : {
-    "BootcampConnection" : "Data Source=Albuns.db"
+    "BootcampConnection" : "Data Source=Albuns.db",
+    "AllowedOrigins" : [
+      "https://codersacademyangularfrontend.web.app/",
+      "https://codersacademyangularfrontend.firebaseapp.com/"
+    ]
   }
 }
